--- a/dojo.html
+++ b/dojo.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <link rel="icon" href="img/icono.png" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Cobra Kai</title>
   </head>
   <body>
@@ -55,7 +55,7 @@
               <a class="nav-link" href="dojo.html">Dojo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="inscripcion.html">Inscripción</a>
+              <a class="nav-link" href="inscripcion.html">Inscribite</a>
             </li>
           </ul>
         </div>
@@ -94,8 +94,10 @@
             <cite class="text-justify"
               >"Mira, a mí no me enseñaron la diferencia entre piedad y honor, y
               pagué el precio. Si soy tan exigente contigo es porque tienes el
-              potencial de ser mejor que yo."</cite
-            ><br /><br />
+              potencial de ser mejor que yo."</cite>
+              <br /><br />
+              <h5 id="resultado"></h5>
+              <br /><br />
           </div>
           <div class="col-md flex">
             <a onclick="jugar_ahora()">
@@ -105,10 +107,6 @@
           </div>
         </div>
         <br /><br />
-        <div class="flex">
-          <h5 id="resultado"></h5>
-          <br /><br />
-        </div>
         <div class="d-none" id="biografia">
           <div class="row">
             <div class="col-md-8">
@@ -320,6 +318,6 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
-    <script src="index.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
