--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <link rel="icon" href="img/icono.png" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Cobra Kai</title>
   </head>
   <body>
@@ -55,7 +55,7 @@
               <a class="nav-link" href="dojo.html">Dojo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="inscripcion.html">Inscripción</a>
+              <a class="nav-link" href="inscripcion.html">Inscribite</a>
             </li>
           </ul>
         </div>
