--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a class="navbar-brand" href="#">
           <img
             src="img/icono.png"
-            width="70"
+            width="60"
             class="d-inline-block align-top"
             alt=""
             loading="lazy"
@@ -65,9 +65,10 @@
       </audio>
     </header>
     <section style="text-align: center">
-      <article class="flex">
-        <img src="img/789647.png" alt="" />
-        <br /><br /><br /><br />
+      <article>
+        <br><br><br>
+        <img class="animado" src="img/789647.png" alt="" />
+        <br><br><br><br><br>
       </article>
       <a
         href="https://www.netflix.com/ar/Login"
@@ -78,11 +79,11 @@
       </a>
     </section>
     <footer>
-      <br />
+      <br>
       <p class="alegreya text-center">
-        e2equle1 &copy; 2020 all rights reserved
+      &copy; 2020 all rights reserved
       </p>
-      <br />
+      <br>
     </footer>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -99,5 +100,6 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
