--- a/inscripcion.html
+++ b/inscripcion.html
@@ -29,7 +29,7 @@
         <a class="navbar-brand" href="#">
           <img
             src="img/icono.png"
-            width="70"
+            width="60"
             class="d-inline-block align-top"
             alt=""
             loading="lazy"
@@ -61,7 +61,7 @@
         </div>
       </nav>
       <div class="flex" style="height: 190%">
-        <h2 class="text-uppercase text-white-50">unete a las cobras</h2>
+        <h2 class="text-uppercase text-white-50 alegreya">unete a las cobras</h2>
       </div>
     </header>
     <section class="container flex">
@@ -127,11 +127,11 @@
       <br /><br />
     </section>
     <footer>
-      <br />
+      <br>
       <p class="alegreya text-center">
-        e2equle1 &copy; 2020 all rights reserved
+      &copy; 2020 all rights reserved
       </p>
-      <br />
+      <br>
     </footer>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
