correcciones dojo.html

--- a/dojo.html
+++ b/dojo.html
@@ -87,15 +87,15 @@
         </div>
         <br />
         <div class="row p-2">
-          <div class="col-md-8">
+          <div class="col-md-8 clearfix">
             <h2 class="text-center">Juguemos !!!</h2>
             <br />
             <p class="text-center">Ingresa tu nombre: <input type="text" id="nombre" /></p>
             <br />
-            <h3>De quién es la frase?</h3>
+            <h3>De quién es la frase? ...</h3>
             <cite class="text-justify"
-              >"Mira, a mí no me enseñaron la diferencia entre piedad y honor, y pagué el precio. Si soy tan exigente contigo es porque tienes el potencial de ser mejor que yo."</cite>
-              <br /><br />
+              >"Mira, a mí no me enseñaron la diferencia entre piedad y honor, y pagué el precio. Si soy tan exigente contigo es porque tienes el potencial de ser mejor que yo."</cite><br>
+            <br /><br />
           </div>
           <div class="col-md flex">
             <a onclick="jugar_ahora()">
@@ -106,7 +106,7 @@
         </div>
         <div class="flex">
           <div class="d-none" id="pre-resultado">
-            <br><br>
+            <br>
             <h5 id="resultado"></h5>
             <br><br><br><br>
           </div>
