--- a/dojo.html
+++ b/dojo.html
@@ -29,7 +29,7 @@
         <a class="navbar-brand" href="#">
           <img
             src="img/icono.png"
-            width="60"
+            width="50"
             class="d-inline-block align-top"
             alt=""
             loading="lazy"
@@ -47,7 +47,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto" style="font-size: 1.3rem">
+          <ul class="navbar-nav" style="font-size: 1.3rem">
             <li class="nav-item">
               <a class="nav-link" href="index.html">Inicio</a>
             </li>
