--- a/dojo.html
+++ b/dojo.html
@@ -90,7 +90,7 @@
           <div class="col-md-8 clearfix">
             <h2 class="text-center">Juguemos !!!</h2>
             <br />
-            <p class="text-center">Ingrese tu nombre: <input type="text" id="nombre" /></p>
+            <p class="text-center">Ingresa tu nombre: <input type="text" id="nombre" /></p>
             <br />
             <h3>De quién es la frase? ...</h3>
             <cite class="text-justify"
