mejoras de fondo y otras cosas

--- a/dojo.html
+++ b/dojo.html
@@ -23,7 +23,7 @@
   <body>
     <header>
       <nav
-        class="navbar navbar-expand-lg navbar-dark alegreya"
+        class="navbar navbar-expand-lg navbar-dark alegreya sticky-top"
         style="background-color: transparent; font-size: 1.2rem"
       >
         <a class="navbar-brand" href="#">
@@ -47,7 +47,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav" style="font-size: 1.3rem">
+          <ul class="navbar-nav ml-auto" style="font-size: 1.3rem">
             <li class="nav-item">
               <a class="nav-link" href="index.html">Inicio</a>
             </li>
@@ -122,6 +122,7 @@
 
               De igual forma, participan los actores Joe Seo, Jacob Bertrand, Nichole Brown, Connor Murdock, Griffin Santopietro, Hannah Kepple, Gabe Bowles, Owen Morgan, Annalisa Cochrane, Gianni Decenzo, Cameron Markeles, Denzel K. Williams, Bo Mitchell, Bret Ernst, Dan Ahdoot y Jonathan Mercedes, entre otros.
             </div><br><br>
+            <h3 class="alegreya text-uppercase">personajes</h3><br>
           <div class="row">
             <div class="col-md-3">
               <table class="table text-white-50">
@@ -280,7 +281,7 @@
     </section>
     <footer>
       <br>
-      <p class="alegreya text-center">
+      <p class="alegreya text-center text-white-50">
       &copy; 2020 all rights reserved
       </p>
       <br>
