--- a/inscripcion.html
+++ b/inscripcion.html
@@ -20,10 +20,10 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Cobra Kai</title>
   </head>
-  <body>
+  <body style="background-color: black;">
     <header>
       <nav
-        class="navbar navbar-expand-lg navbar-dark alegreya"
+        class="navbar navbar-expand-lg navbar-dark alegreya sticky-top"
         style="background-color: transparent; font-size: 1.2rem"
       >
         <a class="navbar-brand" href="#">
@@ -47,7 +47,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav" style="font-size: 1.3rem">
+          <ul class="navbar-nav ml-auto" style="font-size: 1.3rem">
             <li class="nav-item">
               <a class="nav-link" href="index.html">Inicio</a>
             </li>
@@ -61,6 +61,7 @@
         </div>
       </nav>
       <div class="flex" style="height: 190%">
+        <br>
         <h2 class="text-uppercase text-white-50 alegreya">unete a las cobras</h2>
       </div>
     </header>
@@ -128,7 +129,7 @@
     </section>
     <footer>
       <br>
-      <p class="alegreya text-center">
+      <p class="alegreya text-center text-white-50">
       &copy; 2020 all rights reserved
       </p>
       <br>
